[metadata]
name = transpo
version = 0.2.0
description = Transpose the directory structure.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/transpo
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
    transpo = transpo.main:main
